# pico-drone

./: .gitmodules  README.md  compile.sh  output (copy).txt
pico/pico-examples/: CMakeLists.txt
pico/pico-examples/hello_world/usb/: CMakeLists.txt  hello_usb.c
pico/pico-examples/hello_world_6050/usb/: mpu6050_i2c.c
pico/pico-examples/pico-drone/: CMakeLists.txt
pico/pico-examples/pico-drone/pico-drone/: CMakeLists.txt  pico-drone.c
